modify magnet code

--- a/023_toploader.ipynb
+++ b/023_toploader.ipynb
@@ -179,19 +179,26 @@
     "magnet.write(\"RAMP\")\n",
     "\n",
     "def set_b(mag, b):\n",
+    "    magnet.device_clear()\n",
+    "    time.sleep(0.1)\n",
     "    mag.write(f'CONF:FIELD:TARG {b}')\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(0.1)\n",
+    "    magnet.device_clear()\n",
+    "    time.sleep(0.1)\n",
     "    mag.ask('STATE?') # Magnet somtimes retains things in its buffer\n",
     "    time.sleep(0.01)\n",
     "    while int(mag.ask('STATE?')) == 1:\n",
-    "        time.sleep(0.5)\n",
+    "        time.sleep(0.1)\n",
+    "        magnet.device_clear()\n",
     "\n",
     "\n",
     "def get_b(mag):\n",
-    "    ret = mag.ask('FIELD:MAG?') # Magnet somtimes retains things in its buffer\n",
-    "    time.sleep(0.01)\n",
+    "    magnet.device_clear() # Magnet somtimes retains things in its buffer\n",
+    "    time.sleep(0.1)\n",
     "    ret = mag.ask('FIELD:MAG?')\n",
     "    while len(ret) == 0:\n",
+    "        time.sleep(0.1)\n",
+    "        magnet.device_clear()\n",
     "        time.sleep(0.1)\n",
     "        ret = mag.ask('FIELD:MAG?')\n",
     "    return float(ret)\n",
